# arcmesh-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/arcmesh/: cli.py
src/arcmesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/arcmesh/commands/: mcp.py
