[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcmesh"
version = "0.1.2"
description = "One command. Your codebase, AI-ready."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "claude", "ai", "developer-tools", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "questionary>=2.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/arcmesh-labs/arcmesh-cli"
"Bug Tracker" = "https://github.com/arcmesh-labs/arcmesh-cli/issues"

[project.scripts]
arcmesh = "arcmesh.cli:cli"
mcp = "arcmesh.commands.mcp:mcp"

[tool.setuptools.packages.find]
where = ["src"]